docs/api/qiskit/0.19/qiskit.transpiler.passes.Unroll3qOrMore.mdx
---
title: Unroll3qOrMore (v0.19)
description: API reference for qiskit.transpiler.passes.Unroll3qOrMore in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Unroll3qOrMore
---

# Unroll3qOrMore

<Class id="qiskit.transpiler.passes.Unroll3qOrMore" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/basis/unroll_3q_or_more.py" signature="Unroll3qOrMore(*args, **kwargs)" modifiers="class">
  Recursively expands 3q+ gates until the circuit only contains 2q or 1q gates.

  ## Attributes

  <span id="unroll3qormore-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.Unroll3qOrMore.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="unroll3qormore-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.Unroll3qOrMore.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="unroll3qormore-name" />

  ### name

  <Function id="qiskit.transpiler.passes.Unroll3qOrMore.name" signature="Unroll3qOrMore.name()">
    Return the name of the pass.
  </Function>

  <span id="unroll3qormore-run" />

  ### run

  <Function id="qiskit.transpiler.passes.Unroll3qOrMore.run" signature="Unroll3qOrMore.run(dag)">
    Run the Unroll3qOrMore pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – input dag

    **Returns**

    output dag with maximum node degrees of 2

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

    **Raises**

    **QiskitError** – if a 3q+ gate is not decomposable
  </Function>
</Class>

